Se agregaron las demas categorias excepto mundo

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button class="category b-black"><img class="logo-black" src="image/avengers-black.png"><img class="heartbeat logo-color" src="image/avengers.png"></button>
             <button class="category ff-graphica b-yellow"><i class="fa-solid fa-comment heartbeat"></i>Cultura</button>
             <button class="category ff-graphica b-green"><i class="fa-solid fa-earth-americas heartbeat"></i>Mundo</button>
-            <button class="category ff-graphica b-"><i class="fa-solid fa-clapperboard heartbeat"></i>Cine</button>
+            <button class="category ff-graphica b-violet"><i class="fa-solid fa-clapperboard heartbeat"></i>Cine</button>
         </div>
     </header>
 
@@ -52,16 +52,16 @@
                 <div class="cuadro__imagen">
                     <img id="imagen" src=>
                 </div>
-                <h3 id="pregunta" class="ff-graphica"></h3>
+                <h3 id="pregunta" class=""></h3>
             </div>
         </section>
 
         <section class="opciones">
             <div class="opciones__content">
-                <button class="opcion ff-graphica"> Relación matemática entre los</button>
-                <button class="opcion ff-graphica">Mjornir</button>
-                <button class="opcion ff-graphica">StormBreaker</button>
-                <button class="opcion ff-graphica">Miornir</button>
+                <button class="opcion"></button>
+                <button class="opcion"></button>
+                <button class="opcion"></button>
+                <button class="opcion"></button>
             </div>
         </section>
     </main>
