cambio de titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/8c7ff1173b.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="" href="" />
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>Menu</title>
+    <title>Trivialis</title>
     <meta name="description" content="">
 </head>
 
