Arreglo de respuesta y arreglo de vinculos.

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
         <section id="game" class="juego">
             <div class="top">
                 <div class="tiempo">
-                    <img src="/image/icons8-sand-timer-100.png">
+                    <img src="./image/icons8-sand-timer-100.png">
                     <p id="reloj" class="ff-quest">180</p>
                 </div>
                 <h2 id="modoSeleccionado" class="ff-category">Supervivencia</h2>
                 <div id="corazones" class="vida">
-                    <img class="heart corazon" src="/image/icons8-heart-65.png">
-                    <img class="heart corazon" src="/image/icons8-heart-65.png">
-                    <img class="heart corazon" src="/image/icons8-heart-65.png">
+                    <img class="heart corazon" src="./image/icons8-heart-65.png">
+                    <img class="heart corazon" src="./image/icons8-heart-65.png">
+                    <img class="heart corazon" src="./image/icons8-heart-65.png">
                 </div>
             </div>
             <div class="card__game">
